// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ellipsis create a tooltip  and elipsis on anchor elemennt 1`] = `
<EllipisWithTooltip
  id="a"
  placement="top"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Tooltip
        bsClass="tooltip"
        id="tooltip-1"
        placement="right"
      >
         long text 
      </Tooltip>
    }
    placement="top"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <div
      className="ellipsis"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
       
      <a
        href="#"
      >
         long text 
      </a>
       
    </div>
  </OverlayTrigger>
</EllipisWithTooltip>
`;

exports[`Ellipsis use bottom tooltip placement 1`] = `
<EllipisWithTooltip
  id="a"
  placement="bottom"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Tooltip
        bsClass="tooltip"
        id="tooltip-1"
        placement="right"
      >
        text
      </Tooltip>
    }
    placement="bottom"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <div
      className="ellipsis"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
       
      text
       
    </div>
  </OverlayTrigger>
</EllipisWithTooltip>
`;
